--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,11 +6,12 @@ body {
 pre {
     position: relative;
     font-size: large;
+    white-space: pre-wrap;
 }
+
 
 button.copy-button {
     position: absolute;
     top: 0;
     right: 0;
-
 }
