--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -32,3 +32,15 @@ hr:after {
     position: relative;
     top: -13px;
 }
+
+
+/* .zoo-zoom */
+
+.zoo-zoom span {
+    text-transform: none;
+}
+
+.zoo-zoom span:hover {
+    text-transform: uppercase;
+    color: darkviolet;
+}
