We have such sights to show you: open create term guid (#12)
* add aww term

* add aww term

* fix gcc compile error in aww term

* update Thu 01/12/2023

* update Thu 01/12/2023

* add aww open

* add aww-create

* implement initial aww-create

* add aww create template

* copy assets for aww-create

* add aww-create-folder copy

* update Thu 01/19/2023

* update Fri 01/20/2023

* update Fri 01/20/2023

* extended aww create with new templates and variables

* add template modifier in aww create

* fix tiny issue

* update Fri 01/27/2023

* update Fri 01/27/2023

* aww::inspiration

* ts templates

* fix clan warning

* update Mon 01/30/2023

* add default to aww git open

* remove doxygen

* add aww guid

* fix nullptr issue apple

* update Wed 02/01/2023

* update Wed 02/01/2023

* normalize path in aww open

* update Wed Feb  8 09:55:52 PM PST 2023

* update Wed Feb  8 09:57:18 PM PST 2023

* update Sun 02/12/2023

* fix guid on windows

* we have such sights to show you!

* aaaa

* release open create term guid!

---------

Co-authored-by: Gogs <gogs@fake.local>
Co-authored-by: dzhariy <you@example.com>

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -32,3 +32,24 @@ hr:after {
     position: relative;
     top: -13px;
 }
+
+
+/* .zoo-zoom */
+
+.zoo-zoom span {
+    text-transform: none;
+}
+
+.zoo-zoom span:hover {
+    text-transform: uppercase;
+    color: darkviolet;
+}
+
+.text-date-added {
+    font-size: 0.8em;
+    color: #999;
+}
+
+.text-date-added::before {
+    content: "Added: ";
+}
